// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add only normal 1`] = `
Array [
  Object {
    "test": true,
  },
  Object {
    "extraMeta": "something meta",
  },
]
`;

exports[`add only normal 2`] = `
Array [
  Object {
    "test": true,
  },
  Object {
    "extraMeta": "be careful",
    "whatShouldIUse": "algolia",
  },
]
`;

exports[`adds nothing 1`] = `
Array [
  undefined,
  Object {
    "extraMeta": "something meta",
  },
]
`;

exports[`adds nothing 2`] = `
Array [
  undefined,
  Object {
    "extraMeta": "be careful",
    "whatShouldIUse": "algolia",
  },
]
`;

exports[`doesn't change the object 1`] = `
Object {
  "anotherFn": [Function],
}
`;

exports[`doesn't change the object 2`] = `
Object {
  "anotherFn": [Function],
}
`;

exports[`doesn't mess with first param 1`] = `
Array [
  Object {
    "boring": "test",
  },
  Object {
    "extraMeta": "something meta",
    "test": true,
  },
]
`;

exports[`doesn't mess with first param 2`] = `
Array [
  Object {
    "boring": "test",
  },
  Object {
    "extraMeta": "be careful",
    "test": true,
    "whatShouldIUse": "algolia",
  },
]
`;

exports[`gets appended to meta param 1`] = `
Array [
  undefined,
  Object {
    "extraMeta": "something meta",
    "test": true,
  },
]
`;

exports[`gets appended to meta param 2`] = `
Array [
  undefined,
  Object {
    "extraMeta": "be careful",
    "test": true,
    "whatShouldIUse": "algolia",
  },
]
`;

exports[`override meta param 1`] = `
Array [
  Object {
    "boring": "test",
  },
  Object {
    "extraMeta": "something meta",
  },
]
`;

exports[`override meta param 2`] = `
Array [
  Object {
    "boring": "test",
  },
  Object {
    "extraMeta": "be careful",
    "whatShouldIUse": "algolia",
  },
]
`;
